--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
-       <a href="index.html" class="logo"><img src="assets/img/logo.png" /a> 
+       <a href="index.html" class="logo"><img src="assets/img/Logo.png" /a> 
       <!-- Uncomment below if you prefer to use text as a logo -->
      <!-- <h1 class="logo"><a href="index.html">বিন্দুপ্রয়াস</a></h1> -->
 
@@ -789,7 +789,7 @@
         &copy; Copyright <strong><span>Afnan Ahmad</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
-        Designed by <a href="https://github.com/Labib-Rahman/">বিন্দুপ্রয়াস আইটি </a>
+        Designed by <a href="https://github.com/mahmudurrahmanlabib/">Mahmudur Rahman Labib</a>
       </div>
     </div>
   </footer><!-- End Footer -->
