--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <div class="row">
         <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
           <h1>IT IS A CHAIN OF GOOD WISHERS...</h1>
-          <h2>Here at this organization we provide help to the people in need. That means all people -- regardless of politics, religion, or ability to pay. Improving their lives is our mission.</h2>
+          <h2>Here at this organization we provide help to the people in need. <br> That means all people, regardless of gender, politics, race, religion, or ability to pay. Improving their lives is our mission.</h2>
           <div><a href="#about" class="btn-get-started scrollto">Get Started</a></div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img">
