Motto Words Fixed

--- a/index.html
+++ b/index.html
@@ -105,19 +105,19 @@
 
             <div class="icon-box">
               <div class="icon"><i class="bx bx-droplet"></i></div>
-              <h4 class="title"><a href="">Blood Donations</a></h4>
+              <h4 class="title"><a href="">Effort</a></h4>
               <p class="description">Excuses never save a life, Blood Donation does. There is a hope of life to someone in your blood donation.</p>
             </div>
 
             <div class="icon-box">
               <div class="icon"><i class="bx bx-gift"></i></div>
-              <h4 class="title"><a href="">Philanthropy</a></h4>
+              <h4 class="title"><a href="">Innovation</a></h4>
               <p class="description">Contribution made in the spirit of humanitarianism to the people in need.</p>
             </div>
 
             <div class="icon-box">
               <div class="icon"><i class="bx bx-atom"></i></div>
-              <h4 class="title"><a href="">Progress</a></h4>
+              <h4 class="title"><a href="">Welfare</a></h4>
               <p class="description"> “That's one small step for a man, one giant leap for mankind.” <br> - Neil Armstrong</p>
             </div>
 
